--- a/FR/lesson7-calc/index.html
+++ b/FR/lesson7-calc/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +8,7 @@
 </head>
 <body>
     <div class="calculator">
-        <input type="text" id="display" >
+        <input type="text" id="display" readonly>
         <div class="keys">
           <button class="grey" onclick="clearDisplay()">C</button>
           <button class="grey" onclick="changeSign()">+/-</button>
