--- a/FR/lesson8/index.html
+++ b/FR/lesson8/index.html
@@ -18,6 +18,6 @@
     </div>
 <div class="products" id="products"></div>
 
-<script type="module" src="./script.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
